src/test/contracts/negative/pattern_matching_anomalies/redundant_case/c1_w_c2_c3.mligo
type t = One of int | Two of nat | Three

let s (x : t) = 
  match x with
    One a -> ()
  | _     -> ()
  | Two c -> ()
  | Three -> ()